Fix collapsable sidebar only being as tall as the viewport

--- a/frontend/src/styles/Sidebar.module.scss
+++ b/frontend/src/styles/Sidebar.module.scss
@@ -1,8 +1,14 @@
 @use 'colors';
 
+.sidebarContainer {
+	flex-grow: 0;
+	position: relative;
+}
+
 .sidebar {
 	flex-grow: 0;
 	width: 300px;
+	height: 100%;
 	border-top: 2px solid black;
 	padding: 5px;
 	background-color: colors.$theme;
@@ -36,6 +42,8 @@
 }
 
 .sidebarButton {
+	position: absolute;
+	left: 0;
 	display: none;
 	cursor: pointer;
 	padding: 3px;
@@ -52,6 +60,7 @@
 }
 
 .sidebarBackButton {
+	position: initial;
 	border: 1px solid black;
 	border-radius: 0;
 	background-color: colors.$accent;
